<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottomNav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/bottomNav_home"
        />

    <item
        android:id="@+id/bottomNav_YourAuctions"
        android:icon="@drawable/ic_local_offer_black_24dp"
        android:title="@string/bottomNav_YourAuctions"
        />

    <item
        android:id="@+id/bottomNav_AddProduct"
        android:icon="@drawable/ic_add_circle_black_24dp"
        android:title="@string/bottomNav_addProduct"
        />

    <item
        android:id="@+id/bottomNav_Account"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/bottomNav_account"
        />





</menu>