<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <EditText
        android:id="@+id/addProduct_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/titleHint"
        android:gravity="center"
        android:inputType="text"
        />
    <EditText
        android:background="@android:color/transparent"
        android:id="@+id/addProduct_Description"
        android:inputType="textMultiLine"
        android:lines="8"
        android:minLines="6"
        android:gravity="top|left"
        android:maxLines="10"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        android:layout_below="@+id/addProduct_Title"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/descriptionHint"
    />

    <EditText
        android:id="@+id/addProduct_Price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/addProduct_Description"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:hint="@string/zero"
        android:layout_toRightOf="@+id/addProduct_PriceTextView"
        android:textColorHint="@color/textColor"
        />

    <TextView
        android:id="@+id/addProduct_PriceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addProduct_Description"
        android:layout_marginStart="150dp"
        android:text="@string/price"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/textColor"
        />

    <Button
        android:id="@+id/selectImageButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/selectImage"
        android:layout_below="@+id/addProduct_Price"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"

        android:textSize="20sp"
        android:textColor="#000000"
        android:background="@drawable/buttons_background"
        android:shadowColor="#FFFFFF"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        />
    <TextView
        android:id="@+id/selectImageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addProduct_Price"
        android:layout_toRightOf="@+id/selectImageButton"
        android:text="@string/noPhotoSelected"
        android:layout_marginTop="45dp"
        android:textColor="@color/textColor"
        />
    <TextView
        android:id="@+id/durationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:layout_below="@+id/selectImageButton"
        android:layout_marginTop="20dp"
        android:layout_marginStart="55dp"
        android:textSize="20sp"
        android:textColor="@color/textColor"
        />
    <EditText
        android:id="@+id/durationEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:layout_toRightOf="@+id/durationTextView"
        android:layout_below="@+id/selectImageButton"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:hint="@string/zero"
        android:textColorHint="@color/textColor"
    />
    <TextView
        android:id="@+id/durationDaysTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/days"
        android:textSize="20sp"
        android:textColor="@color/textColor"
        android:layout_toRightOf="@+id/durationEditText"
        android:layout_below="@+id/selectImageButton"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        />

    <Button
        android:id="@+id/addProductButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addProductButton"
        android:layout_below="@+id/durationTextView"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        android:layout_centerHorizontal="true"

        android:textSize="20sp"
        android:textColor="#000000"
        android:background="@drawable/buttons_background"
        android:shadowColor="#FFFFFF"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        />



</RelativeLayout>