<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary">
<ImageView
    android:id="@+id/logo"
    android:layout_width="350dp"
    android:layout_height="200dp"
    android:src="@drawable/logo"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="30dp"
    />
<EditText
    android:id="@+id/editText_nick"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="50dp"
    android:layout_marginStart="50dp"
    android:layout_below="@+id/logo"
    android:inputType="text"
    android:hint="@string/loginHint"
    android:gravity="center"/>

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_below="@+id/editText_nick"
        android:inputType="textPassword"
        android:hint="@string/PasswordHint"
        android:gravity="center"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/editText_password"
        android:layout_centerHorizontal="true"
        android:text="@string/Login"

        android:textSize="20sp"
        android:textColor="#000000"
        android:background="@drawable/buttons_background"
        android:shadowColor="#FFFFFF"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        />
    <Button
        android:id="@+id/buttonGoToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/buttonLogin"
        android:layout_centerHorizontal="true"
        android:text="@string/Registration"
        android:onClick="goToRegistrationOnClick"

        android:textSize="20sp"
        android:textColor="#000000"
        android:background="@drawable/buttons_background"
        android:shadowColor="#FFFFFF"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        />


</RelativeLayout>