<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/colorPrimary">

    <EditText
        android:id="@+id/editText_nickRegistery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:inputType="text"
        android:hint="@string/loginHint"
        android:gravity="center"/>

    <EditText
        android:id="@+id/editText_passwordRegistery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_below="@+id/editText_nickRegistery"
        android:inputType="textPassword"
        android:hint="@string/PasswordHint"
        android:gravity="center"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/editText_passwordRegistery"
        android:layout_centerHorizontal="true"
        android:text="@string/Register"
        android:onClick="registerOnClick"

        android:textSize="20sp"
        android:textColor="#000000"
        android:background="@drawable/buttons_background"
        android:shadowColor="#FFFFFF"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        />
</RelativeLayout>